# ICTBOT2

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/: __init__.py  market_data.py  routes.py
src/app/core/: __init__.py  config.py  logging.py  scheduler.py
src/app/services/: __init__.py  heartbeat.py
src/app/services/data_feed/: __init__.py  aggregator.py  market_data_manager.py  providers.py  rate_limit.py  service.py  types.py
src/app/utils/: time.py
tests/services/: test_data_feed_aggregator.py  test_data_feed_providers.py  test_data_feed_service.py  test_market_data_manager.py
